--- a/WebApplication6/WebApplication6.csproj
+++ b/WebApplication6/WebApplication6.csproj
@@ -1,12 +1,25 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="wwwroot\real-time2.html" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\real-time2.html" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.AspNetCore.WebSockets" Version="2.1.7" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="SimpleView\" />
   </ItemGroup>
 
 </Project>
