--- a/WebSocketChatApp/Properties/launchSettings.json
+++ b/WebSocketChatApp/Properties/launchSettings.json
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "WebApplication6": {
+    "WebSocketChat": {
       "commandName": "Project",
       "launchBrowser": true,
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
